# cpp-compcoll

compcoll/: README.md  autogen.sh  configure.ac
compcoll/doc/manual/: compcollman.tex
compcoll/src/: Makefile.am  compcoll.c  editdistance.c  editdistance.h  getline.h  i18n.c  i18n.h  mymat.c  mymat.h  octstring.c  octstring.h  ucdet.c  utf8utils.c  utf8utils.h
compcoll/test/: 001a.txt  001b.txt  ascii.txt  test.html  utf8bom.txt  utf8zh.txt  utf8zhbom.txt
compcoll/utils/: compcolldir.sh  htm2txt.sh  run1.sh  run2.sh  splithtml.sh
convzhs2t/: README.md
